# okuuchu

./: .gitignore  CHANGELOG.md  LICENSE  README.md  okuuchu.cabal
.github/workflows/: haskell-ci.yml
app/: Config.hs  Database.hs  Feeds.hs  Lemmy.hs  Main.hs  PasswordManager.hs
app/Database/: FeedDB.hs  PostDB.hs
app/Lemmy/: Community.hs  CommunityTypes.hs  Post.hs  PostRequest.hs  PostResponse.hs  User.hs  Utilities.hs
config/: app-CHANGEME.yaml
test/: DatabaseSpec.hs
