cabal-version: 3.0
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.
-- Starting from the specification version 2.2, the cabal-version field must be
-- the first thing in the cabal file.
--
-- The name of the package.
name: okuuchu
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version: 0.1.0.0
-- A short (one-line) description of the package.
synopsis: RSS and Atom feed reader and lemmy client
-- A longer description of the package.
description: RSS and Atom feed reader and lemmy client to read feeds from RSS and submit them to lemmy.
-- The license under which the package is released.
license: BSD-3-Clause
-- The file containing the license text.
license-file: LICENSE
-- The package author(s).
author: VitalyOlegovic
-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: vitalij_zad@libero.it
-- A copyright notice.
-- copyright:
category: Web
build-type: Simple
-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:
tested-with: ghc ==9.6.4

source-repository head
  type: git
  location: https://github.com/VitalyOlegovic/okuuchu.git

common warnings
  ghc-options: -Wall

executable okuuchu
  -- Import common warning flags.
  import: warnings
  -- .hs or .lhs file containing the Main module.
  main-is: Main.hs
  -- Modules included in this executable, other than Main.
  other-modules:
    Config
    Database
    Database.FeedDB
    Database.PostDB
    Feeds
    Lemmy
    Lemmy.Community
    Lemmy.CommunityTypes
    Lemmy.Post
    Lemmy.PostRequest
    Lemmy.PostResponse
    Lemmy.User
    Lemmy.Utilities
    PasswordManager

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- Other library packages from which modules are imported.
  build-depends:
    aeson >=2.2.3 && <2.3,
    aeson-casing >= 0.2.0 && < 0.3,
    base >=4 && <4.20,
    bytestring >=0.11.5 && <0.12,
    cryptonite >=0.30 && <0.31,
    directory >=1.3.8 && <1.4,
    feed ==1.3.2.1,
    haskeline >=0.8.2 && <0.9,
    http-client >=0.7.19 && <0.8,
    http-client-tls >=0.3.6 && <0.4,
    http-conduit >=2.3,
    http-conduit >=2.3.9 && <2.4,
    text >=2.0.2 && <2.1,
    time >=1.12.2 && <1.13,
    yaml >=0.11.11 && <0.12,
    sqlite-simple >= 0.4.19 && < 0.5,

  -- Directories containing source files.
  hs-source-dirs: app
  -- Base language which the package is written in.
  default-language: Haskell2010
